# dockerpoetry

./: .env  .gitignore  Dockerfile  main.py  pyproject.toml  sam.txt  uvicorn.sh
app/: config.py  database.py
app/routers/: default.py
app/task/: main.py  models.py
tests/: test.py
